--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@
 /log/*
 !/log/.keep
 /tmp
+
+# Ignore local settings files, these can contain sensitive data.
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
