--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -29,6 +29,8 @@ publishers:
     url: https://forms.biola.edu/admin
   - name: Generic Objects
     url: https://wcms.biola.edu/academics/generic_objects
+  - name: Important Dates
+    url: http://wcms.biola.edu/important_dates
   - name: Groups
     url: https://wcms.biola.edu/profiles/groups
   - name: Outcome Pages
