--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -1,53 +1,53 @@
 publishers:
   - name: Academic Programs
-    url: http://wcms.staging.biola.edu/academics/academic_programs
+    url: https://wcms.staging.biola.edu/academics/academic_programs
   - name: Academic Subjects
-    url: http://wcms.staging.biola.edu/academics/academic_subjects
+    url: https://wcms.staging.biola.edu/academics/academic_subjects
   - name: Articles
-    url: http://wcms.staging.biola.edu/news/articles
+    url: https://wcms.staging.biola.edu/news/articles
   - name: Attachments
-    url: http://wcms.staging.biola.edu/academics/attachments
+    url: https://wcms.staging.biola.edu/academics/attachments
   - name: Calendars
-    url: http://wcms.stagingbiola.edu/calendars
+    url: https://wcms.stagingbiola.edu/calendars
   - name: Catalogs
-    url: http://wcms.staging.biola.edu/academics/catalogs
+    url: https://wcms.staging.biola.edu/academics/catalogs
   - name: Courses
-    url: http://wcms.staging.biola.edu/academics/courses
+    url: https://wcms.staging.biola.edu/academics/courses
   - name: Data Templates
-    url: http://wcms.staging.biola.edu/academics/presentation_data_templates
+    url: https://wcms.staging.biola.edu/academics/presentation_data_templates
   - name: Departments
-    url: http://wcms.staging.biola.edu/profiles/offices-services
+    url: https://wcms.staging.biola.edu/profiles/offices-services
   - name: Events
-    url: http://wcms.staging.biola.edu/news/events
+    url: https://wcms.staging.biola.edu/news/events
   - name: External Articles
-    url: http://wcms.staging.biola.edu/news/external_articles
+    url: https://wcms.staging.biola.edu/news/external_articles
   - name: External Blogs
-    url: http://wcms.staging.biola.edu/news/external_blogs
+    url: https://wcms.staging.biola.edu/news/external_blogs
   - name: Features
-    url: http://wcms.staging.biola.edu/news/features
+    url: https://wcms.staging.biola.edu/news/features
   - name: Forms
-    url: http://forms.biola.edu/admin
+    url: https://forms.biola.edu/admin
   - name: Generic Objects
-    url: http://wcms.staging.biola.edu/academics/generic_objects
+    url: https://wcms.staging.biola.edu/academics/generic_objects
   - name: Groups
-    url: http://wcms.staging.biola.edu/profiles/groups
+    url: https://wcms.staging.biola.edu/profiles/groups
   - name: Important Dates
-    url: http://wcms.staging.biola.edu/important_dates
+    url: https://wcms.staging.biola.edu/important_dates
   - name: Outcome Pages
-    url: http://wcms.staging.biola.edu/academics/outcome_editions
+    url: https://wcms.staging.biola.edu/academics/outcome_editions
   - name: Page Editions
-    url: http://wcms.staging.biola.edu/page_editions
+    url: https://wcms.staging.biola.edu/page_editions
   - name: People
-    url: http://wcms.staging.biola.edu/profiles/people
+    url: https://wcms.staging.biola.edu/profiles/people
   - name: Publications
-    url: http://wcms.staging.biola.edu/news/publications
+    url: https://wcms.staging.biola.edu/news/publications
   - name: Publication Categories
-    url: http://wcms.staging.biola.edu/news/publication_categories
+    url: https://wcms.staging.biola.edu/news/publication_categories
   - name: Schools
-    url: http://wcms.staging.biola.edu/academics/schools
+    url: https://wcms.staging.biola.edu/academics/schools
   - name: Sites
-    url: http://wcms.staging.biola.edu/news/sites
+    url: https://wcms.staging.biola.edu/news/sites
   - name: University Learning Outcomes
-    url: http://wcms.staging.biola.edu/academics/university_learning_outcomes
+    url: https://wcms.staging.biola.edu/academics/university_learning_outcomes
   - name: Users
-    url: http://wcms.staging.biola.edu/news/users
+    url: https://wcms.staging.biola.edu/news/users
