WCMS-467 Added campus locations

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -18,6 +18,8 @@ publishers:
     url: http://academic-publisher.dev/attachments
   - name: Calendars
     url: http://wcms.dev/calendars
+  - name: Campus Location
+    url: http://wcms.dev/campus_locations
   - name: Catalogs
     url: http://academic-publisher.dev/catalogs
   - name: Courses
