--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -8,7 +8,7 @@ publishers:
   - name: Attachments
     url: https://wcms.staging.biola.edu/academics/attachments
   - name: Calendars
-    url: https://wcms.stagingbiola.edu/calendars
+    url: https://wcms.staging.biola.edu/calendars
   - name: Campus Location
     url: https://wcms.staging.biola.edu/campus_locations
   - name: Catalogs
