--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -48,6 +48,8 @@ publishers:
     url: http://profile-publisher.dev/groups
   - name: Important Dates
     url: http://wcms.dev/important_dates
+  - name: Menus
+    url: http://wcms.dev/menus
   - name: Outcome Pages
     url: http://academic-publisher.dev/outcome_editions
   - name: Page Editions
