--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -41,6 +41,8 @@ publishers:
     url: https://wcms.biola.edu/profiles/groups
   - name: Important Dates
     url: https://wcms.biola.edu/important_dates
+  - name: Menus
+    url: https://wcms.biola.edu/menus
   - name: Outcome Pages
     url: https://wcms.biola.edu/academics/outcome_editions
   - name: Page Editions
