--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -40,6 +40,8 @@ publishers:
     url: https://wcms.staging.biola.edu/profiles/groups
   - name: Important Dates
     url: https://wcms.staging.biola.edu/important_dates
+  - name: Menus
+    url: https://wcms.staging.biola.edu/menus
   - name: Outcome Pages
     url: https://wcms.staging.biola.edu/academics/outcome_editions
   - name: Page Editions
