--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -58,7 +58,7 @@ publishers:
   - name: Service Links
     url: https://wcms.biola.edu/service_links
   - name: Sites
-    url: https://wcms.biola.edu/news/sites
+    url: https://wcms.biola.edu/sites
   - name: University Learning Outcomes
     url: https://wcms.biola.edu/academics/university_learning_outcomes
   - name: Users
