--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -57,7 +57,7 @@ publishers:
   - name: Service Links
     url: https://wcms.staging.biola.edu/service_links
   - name: Sites
-    url: https://wcms.staging.biola.edu/news/sites
+    url: https://wcms.staging.biola.edu/sites
   - name: University Learning Outcomes
     url: https://wcms.staging.biola.edu/academics/university_learning_outcomes
   - name: Users
