--- a/config/settings.yml
+++ b/config/settings.yml
@@ -41,11 +41,20 @@ author_roles: # This could be overwritten in chef
   - student
   - student worker
 
-external_routes:
-  academic_program: "https://wcms.biola.edu/academics/academic_programs"
-  academic_subject: "https://wcms.biola.edu/academics/academic_subjects"
-  department: "https://wcms.biola.edu/profiles/departments"
-  event: "https://wcms.biola.edu/profiles/events"
-  group: "https://wcms.biola.edu/profiles/groups"
-  # Concentrations don't have their own show pages but are rather listed in academic programs
-  # concentration: "https://wcms.biola.edu/academics/academic_programs"
+universe:
+  development:
+    academic_publisher: # set in settings.local.yml
+    profile_publisher: # set in settings.local.yml
+    news_publisher: # set in settings.local.yml
+  staging:
+    academic_publisher: "https://wcms.staging.biola.edu/academics"
+    profile_publisher: "https://wcms.staging.biola.edu/profiles"
+    news_publisher: "https://wcms.staging.biola.edu/news"
+  production:
+    academic_publisher: "https://wcms.biola.edu/academics"
+    profile_publisher: "https://wcms.biola.edu/profiles"
+    news_publisher: "https://wcms.biola.edu/news"
+  test:
+    academic_publisher: "https://wcms.examplations.com/academics"
+    profile_publisher: "https://wcms.examplations.com/profiles"
+    news_publisher: "https://wcms.examplations.com/news"
