Renaming Page Edition to pages in the view The site menu still uses the old way, it pulls the title from the controller name. We would have to update the components gem.

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -52,7 +52,7 @@ publishers:
     url: http://wcms.dev/menus
   - name: Outcome Pages
     url: http://academic-publisher.dev/outcome_editions
-  - name: Page Editions
+  - name: Pages
     url: http://wcms.dev/page_editions
   - name: People
     url: http://profile-publisher.dev/people
