--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -44,7 +44,7 @@ publishers:
     url: https://wcms.staging.biola.edu/menus
   - name: Outcome Pages
     url: https://wcms.staging.biola.edu/academics/outcome_editions
-  - name: Page Editions
+  - name: Pages
     url: https://wcms.staging.biola.edu/page_editions
   - name: People
     url: https://wcms.staging.biola.edu/profiles/people
