updated history tracking. At the moment embedded documents aren't creating history tracks because they aren't "directly" calling save. for instance if i were to do page_edition.audience_collection.create(params) it would work but because we are saving them indirectly through page edition it isn't calling save on the child object for some reason. e.g. page_edition.update_attributes({audience_collection: [{housing_status: [off_campus]}]}) ... or something like that

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -59,28 +59,14 @@ universe:
     profile_publisher: "https://wcms.examplations.com/profiles"
     news_publisher: "https://wcms.examplations.com/news"
 
-# for mongoid history -- assigns additional logs to be shown
+# for mongoid history -- assigns additional child object logs to be shown
 trackable_relations:
-  academic_programs:
+  PageEdition:
+    # non-embeds
     - attachments
-    - concentrations
-    - degree_requirements
-  catalogs:
-    - attachments
-    - degree_requirements
-  concentrations:
-    - degree_requirements
-  degree_requirements:
-    - attachments
-  groups:
-    - attachments
-  outcome_editions:
-    - attachments
-  page_editions:
-    - attachments
-  people:
-    - bio_editions
-    - custom_profiles
-    - profile_photos
-  sites:
+    # embeds
+    - redirect
+    - audience_collection
+    - permissions
+  Site:
     - site_categories
