adding media_editor permissions to the policies

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,7 +7,7 @@ app:
 secret_token:
 
 urn_namespaces:
-- "urn:biola:apps:wcms:"
+- "urn:biola:apps:wcms-publisher:"
 - "urn:biola:apps:all:"
 
 cas:
