--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -5,63 +5,53 @@ elasticsearch:
   index_name: directory
 
 publishers:
-  - name: Academic Programs
+  - title: Academic Programs
     url: https://wcms.biola.edu/academics/academic_programs
-  - name: Academic Subjects
+  - title: Academic Subjects
     url: https://wcms.biola.edu/academics/academic_subjects
-  - name: Articles
+  - title: Articles
     url: https://wcms.biola.edu/news/articles
-  - name: Attachments
+  - title: Attachments
     url: https://wcms.biola.edu/academics/attachments
-  - name: Calendars
-    url: https://wcms.biola.edu/calendars
-  - name: Campus Location
-    url: https://wcms.biola.edu/campus_locations
-  - name: Catalogs
+  - class_name: Calendar
+  - class_name: CampusLocation
+  - title: Catalogs
     url: https://wcms.biola.edu/academics/catalogs
-  - name: Courses
+  - title: Courses
     url: https://wcms.biola.edu/academics/courses
-  - name: Data Templates
-    url: https://wcms.biola.edu/presentation_data_templates
-  - name: Departments
+  - class_name: PresentationDataTemplate
+  - title: Departments
     url: https://wcms.biola.edu/profiles/offices-services
-  - name: Events
+  - title: Events
     url: https://wcms.biola.edu/news/events
-  - name: External Articles
+  - title: External Articles
     url: https://wcms.biola.edu/news/external_articles
-  - name: External Blogs
+  - title: External Blogs
     url: https://wcms.biola.edu/news/external_blogs
-  - name: Features
+  - title: Features
     url: https://wcms.biola.edu/news/features
-  - name: Forms
+  - title: Forms
     url: https://forms.biola.edu/admin
-  - name: Groups
+  - title: Groups
     url: https://wcms.biola.edu/profiles/groups
-  - name: Important Dates
-    url: https://wcms.biola.edu/important_dates
-  - name: Media
-    url: https://wcms.biola.edu/media
-  - name: Menus
-    url: https://wcms.biola.edu/menus
-  - name: Outcome Pages
+  - class_name: ImportantDate
+  - class_name: Medium
+  - class_name: Menu
+  - title: Outcome Pages
     url: https://wcms.biola.edu/academics/outcome_editions
-  - name: Pages
-    url: https://wcms.biola.edu/page_editions
-  - name: People
+  - class_name: PageEdition
+    title: Pages
+  - title: People
     url: https://wcms.biola.edu/profiles/people
-  - name: Photo Galleries
-    url: https://wcms.biola.edu/photo_galleries
-  - name: Publications
+  - class_name: PhotoGallery
+  - title: Publications
     url: https://wcms.biola.edu/news/publications
-  - name: Publication Categories
+  - title: Publication Categories
     url: https://wcms.biola.edu/news/publication_categories
-  - name: Schools
+  - title: Schools
     url: https://wcms.biola.edu/academics/schools
-  - name: Service Links
-    url: https://wcms.biola.edu/service_links
-  - name: Sites
-    url: https://wcms.biola.edu/sites
-  - name: University Learning Outcomes
+  - class_name: ServiceLink
+  - class_name: Site
+  - title: University Learning Outcomes
     url: https://wcms.biola.edu/academics/university_learning_outcomes
-  - name: Users
-    url: https://wcms.biola.edu/users
+  - class_name: User
