--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -21,8 +21,7 @@ publishers:
   - class_name: PresentationDataTemplate
   - title: Departments
     url: https://wcms.staging.biola.edu/profiles/offices-services
-  - title: Events
-    url: https://wcms.staging.biola.edu/news/events
+  - class_name: Event
   - title: External Articles
     url: https://wcms.staging.biola.edu/news/external_articles
   - title: External Blogs
