Migrating events from news-publisher to wcms

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -71,3 +71,11 @@ trackable_relations:
     - permissions
   Site:
     - site_categories
+
+audience:
+  - 'Alumni'
+  - 'Faculty'
+  - 'General Public'
+  - 'Parents'
+  - 'Staff'
+  - 'Students'
