--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -30,6 +30,7 @@ publishers:
   - title: Departments
     url: http://profile-publisher.dev/offices-services
   - class_name: Event
+  - class_name: EventCollection
   - title: External Articles
     url: http://news-publisher.dev/external_articles
   - title: External Blogs
