Adding biola_now import task

--- a/config/settings.local.yml.example
+++ b/config/settings.local.yml.example
@@ -3,3 +3,11 @@ secret_token:
 
 sentry:
   url: # Set me!
+
+external_database:
+  now:
+    dbname:
+    user:
+    password:
+    host:
+    port:
