Added publish/archive worker for defined aasm classes. (#112)
* Added publish/archive worker for defined aasm classes.

* Seperated archiving and publishing workers
Pulled object saving task out into its own worker to avoid queue lag
Updated worker schedule so that archiving and publishing workers are staggered

* Running the status updates every 15 minutes

* Updated workers and specs for aasm state so that they run async-ly

* One more error catching block

--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -1,4 +1,17 @@
+# Every hour at the beginning of the hour
 FireArticleImportWorker:
   cron: "0 * * * *"
   class: "FireArticleImportWorker"
+  queue: default
+
+# Every hour at the beginning and the middle of the hour
+FireArchiveObjectWorker:
+  cron: "0,15,30,45 * * * *"
+  class: "FireArchiveObjectWorker"
+  queue: default
+
+# Every hour at 15 and 45 minute marks
+FirePublishObjectWorker:
+  cron: "0,15,30,45 * * * *"
+  class: "FirePublishObjectWorker"
   queue: default
