--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -15,3 +15,9 @@ FirePublishObjectWorker:
   cron: "0,15,30,45 * * * *"
   class: "FirePublishObjectWorker"
   queue: default
+
+# At 2:37 in the morning
+ChapelImportWorker:
+  cron: "37 2 * * *"
+  class: "ChapelImportWorker"
+  queue: default
