--- a/config/settings.yml
+++ b/config/settings.yml
@@ -102,3 +102,16 @@ ws:
 
 ws_syncable_sites:
   - 'Biola Now'
+
+# Classes that have aasm_states that should be auto published and archived
+aasm_state_classes:
+  auto_archive:
+    - Article
+    - PageEdition
+    - Event
+    - Feature
+  auto_publish:
+    - Article
+    - PageEdition
+    - Event
+    - Feature
