Migrated feature over from news_publisher (#131)
* Migrated feature over from news_publisher

* fix for feature type js

* using data controller to initialize feature js rather than class

--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -31,8 +31,8 @@ publishers:
     url: https://wcms.biola.edu/news/external_articles
   - title: External Blogs
     url: https://wcms.biola.edu/news/external_blogs
-  - title: Features
-    url: https://wcms.biola.edu/news/features
+  - class_name: Feature
+    title: Features
   - title: Forms
     url: https://forms.biola.edu/admin
   - title: Groups
