--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -30,8 +30,8 @@ publishers:
     url: https://wcms.staging.biola.edu/news/external_articles
   - title: External Blogs
     url: https://wcms.staging.biola.edu/news/external_blogs
-  - title: Features
-    url: https://wcms.staging.biola.edu/news/features
+  - class_name: Feature
+    title: Features
   - title: Forms
     url: https://forms.biola.edu/admin
   - title: Groups
