Added wisper pub/sub listener to hit zapier webhook for page changes. (#134)
* Added wisper pub/sub listener to hit zapier webhook for page changes.

* added specs for ActivityTracker::PageEdition

* Added specs for ActivityTracker::Event, fixed mispellings

* pending event activity tracker specs until later.

* switched event activity tracking over to wisper.

* Not tracking event views.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -82,8 +82,10 @@ audience:
   - 'Staff'
   - 'Students'
 
-# Set the destination of the single webhook; in the future we may want to support multiple or even user-defined webhooks
-webhook_url: # set in settings.local.yml
+# Set the destination of zapier webhooks.
+zapier:
+  event_change_webhook_url: # set in settings.local.yml
+  page_change_webhook_url: # set in settings.local.yml
 
 # List academic years you want to import events from chapel api
 chapel_import_years: []
