--- a/config/settings.yml
+++ b/config/settings.yml
@@ -113,3 +113,16 @@ aasm_state_classes:
     - PageEdition
     - Event
     - Feature
+
+# Default contact information for chapel events
+chapel:
+  email: 'chapel@biola.edu'
+  phone: '(562) 903-4874'
+
+# Type specific contact information for chapel events.
+# To include other types just titleize and parameterize the type here. It happens
+#  dynamically in the code.
+#  So AfterDark would become after_dark and Biola Hour would be biola_hour
+talbot:
+  email: 'catherine.m.wilson@biola.edu'
+  phone: '562-944-0351 ext.5521'
